# sample_db

apps/api/: .env  Cargo.toml
apps/api/crates/common/: Cargo.toml
apps/api/crates/common/src/: config.rs  error.rs
apps/api/main/: Cargo.toml
apps/api/main/src/: main.rs
db/sql/: 01_prepare.sql  02_data.sql
db/sql/stored/: my_get_booke_for_paging.sql  my_get_top_page.sql  my_set_books_for_add.sql  my_set_users_for_delete.sql  my_set_workers_for_start.sql
db/sql/table/: books.sql  users.sql  workers.sql
development/: Dockerfile  docker-compose.yaml
