[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tiktokapi-v2 = { version = "0.1.10", features = ["rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"]}
serde_json = "1"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tower-cookies = "0.10.0"
tracing-subscriber = "0.3.18"
url = "2.5.0"