[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deadpool-postgres = { version = "0.12.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.19.0"
thiserror = "1"
url = "2.5.0"